--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,18 +1,26 @@
-body{
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.6rem;
+* {
+  box-sizing: border-box;
 }
 
-button{
+html {
+  font-size: 62.5%;
+}
+
+body {
+  color: $dark-grey;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: $m-size;
+  line-height: 1.6;
+}
+
+button {
   cursor: pointer;
 }
 
-button:disabled{
+button:disabled {
   cursor: default;
 }
 
-.is-active{
-
+.is-active {
   font-weight: bold;
-
 }
